# 0g-memory-hub

./: .env.example  .gitignore  0G_INTEGRATION.md  Cargo.toml  GITHUB_SUBMISSION.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README.zh-CN.md  demo.sh  deploy.sh  go.mod  go.sum  hardhat.config.js  main.go  package.json
.claude/: settings.local.json
apps/agent-demo/: go.mod  main.go
apps/orchestrator-go/: go.mod  go.sum  main.go  tmp_deploy_memory_anchor.go  tmp_sign_anchor.go  tmp_sign_deploy.go
chain/: client.go
cmd/: chat.go  misc.go  query.go  read.go  replay.go  root.go  start.go  task.go  write.go
contracts/: MemoryAnchor.sol  MemoryChain.sol
core/: buffer.go  chain.go  index.go  memory.go  session.go
deployments/0g-testnet/: MemoryAnchor.latest.json
docs/architecture/: 2026-03-21-openclaw-memory-runtime-design.md
docs/demo/: 3min-judge-flow.md  judge-checklist.md
docs/submission/: 2026-03-23-x-post-draft.md  (+4 more)
go/: go.mod  go.sum  main.go
rust/memory-core/: Cargo.toml
rust/memory-core/src/: checkpoint.rs  codec.rs  event_log.rs  lib.rs  merkle.rs  replay.rs  rpc.rs  workflow_state.rs
rust/memory-core/tests/: memory_core_mvp.rs  proptest_suite.rs  rpc_protocol.rs  rpc_server_smoke.rs
scripts/: 0g_integration.go  auto_record.sh  check_testnet_env.js  demo_agent_e2e.sh  demo_record.sh  demo_verify_smoke.sh  deploy.js  generate_testnet_wallet.js  render_deployment_evidence.js
sdk/: memory_hub.go
src/: main.rs
storage/: client.go
test/: MemoryAnchor.js  generate-testnet-wallet.test.js  render-deployment-evidence.test.js
(+58 files in other folders)
