[package]
name = "og-memory-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
ethers = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json"] }
hex = "0.4"
sha2 = "0.10"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
