[package]
name = "memory-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
ciborium = "0.2"
zstd = "0.13"

[dev-dependencies]
proptest = "1.4"

[[bin]]
name = "memory-core-rpc"
path = "src/bin/memory-core-rpc.rs"
